--- a/index.html
+++ b/index.html
@@ -108,55 +108,52 @@
       </div>
     </div>
 
-    <!-- Secciones -->
+    <!-- Educación -->
     <div class="section">
       <h2>Educación</h2>
       <div class="cards">
         <div class="card">
-          <h3>Certificado de Créditos</h3>
-          <p>Acredita los créditos cursados y aprobados dentro del programa académico.</p>
-          <a href="educacion.html">Ver detalles</a>
-        </div>
-        <div class="card">
-          <h3>Econometría</h3>
-          <p>Formación en fundamentos de econometría, análisis estadístico y modelos básicos.</p>
-          <a href="educacion.html">Ver detalles</a>
-        </div>
-        <div class="card">
           <h3>Acta y Certificados</h3>
-          <p>Documentos oficiales que certifican formación y calificaciones obtenidas.</p>
+          <p>Incluye acta académica, certificados de créditos y certificado final del programa académico.</p>
+          <a href="educacion.html">Ver detalles</a>
+        </div>
+        <div class="card">
+          <h3>ESG y Econometría</h3>
+          <p>Formación en estrategias de sostenibilidad (ESG) y fundamentos de econometría.</p>
           <a href="educacion.html">Ver detalles</a>
         </div>
       </div>
     </div>
 
+    <!-- Experiencia -->
     <div class="section">
       <h2>Experiencia</h2>
       <div class="cards">
         <div class="card">
-          <h3>Pasantía en Investigación</h3>
-          <p>Apoyo en procesos de investigación académica, análisis de información y elaboración de insumos.</p>
+          <h3>Apoyo Técnico Administrativo</h3>
+          <p>Gestión administrativa y acompañamiento en asociaciones comunitarias (Porfía 1 y 3).</p>
           <a href="experiencia.html">Ver detalles</a>
         </div>
         <div class="card">
-          <h3>Apoyo Técnico Administrativo</h3>
-          <p>Gestión administrativa y acompañamiento en asociaciones comunitarias.</p>
+          <h3>Pasantía en Investigación</h3>
+          <p>Apoyo en investigación académica, análisis de información y elaboración de insumos.</p>
           <a href="experiencia.html">Ver detalles</a>
         </div>
       </div>
     </div>
 
+    <!-- Investigaciones -->
     <div class="section">
       <h2>Investigaciones</h2>
       <div class="cards">
         <div class="card">
           <h3>Proyectos Investigativos</h3>
-          <p>Acceso a investigaciones en ordenamiento territorial, economía y desarrollo regional.</p>
+          <p>Investigaciones en ordenamiento territorial, economía y desarrollo regional.</p>
           <a href="investigaciones.html">Ver detalles</a>
         </div>
         <div class="card">
           <h3>Ecohotel Los Arrendajos</h3>
-          <p>Proyecto de turismo sostenible con planificación estratégica, mercado y stakeholders.</p>
+          <p>Proyecto de turismo sostenible con planificación estratégica, análisis de mercado y gestión de actores.</p>
           <a href="fases-ecohotel.html">Ver fases</a>
         </div>
       </div>
