--- a/investigaciones.html
+++ b/investigaciones.html
@@ -75,39 +75,19 @@
 
     <h2>Investigaciones</h2>
 
-    <!-- ORDENAMIENTO TERRITORIAL -->
-    <h3>Estrategias Integrales para el Ordenamiento Territorial</h3>
+    <!-- PROYECTO ECOHOTEL -->
+    <h3>Proyecto Ecohotel “Los Arrendajos”</h3>
+    <p>Desarrollo integral del proyecto de turismo sostenible, incluyendo planificación, análisis de mercado y gestión de actores.</p>
+    <a href="fases-ecohotel.html" class="section-link">Fases del proyecto →</a>
+
+    <!-- INVESTIGACIONES GENERALES -->
+    <h3>Avance de Investigación – Ordenamiento Territorial</h3>
     <p>Documento de avance investigativo orientado al análisis del ordenamiento territorial y el desarrollo regional sostenible.</p>
     <div class="doc-card">
-      <h4>Avance de investigación – Subregión Ariari (Meta)</h4>
+      <h4>Subregión Ariari (Meta)</h4>
       <a href="soportes/investigaciones/avance-investigacion-ordenamiento-territorial-meta.pdf" target="_blank">Ver documento</a>
     </div>
 
-    <!-- IMPACTO ECONOMICO -->
-    <h3>Impacto Económico de la Producción de Coca en el PIB</h3>
-    <p>Análisis del impacto económico de la producción de coca en el Producto Interno Bruto del departamento de Nariño durante 1999–2023.</p>
-    <div class="doc-card">
-      <h4>Investigación económica aplicada</h4>
-      <a href="soportes/investigaciones/impacto-economico-coca-pib-narino-1999-2023.pdf" target="_blank">Ver documento</a>
-    </div>
-
-    <!-- INDICE MULTIDIMENSIONAL -->
-    <h3>Índice Multidimensional de Bogotá</h3>
-    <p>Estudio del comportamiento del índice multidimensional en la ciudad de Bogotá entre 2013 y 2023, con enfoque socioeconómico.</p>
-    <div class="doc-card">
-      <h4>Documento de análisis estadístico</h4>
-      <a href="soportes/investigaciones/indice-multidimensional-bogota-2013-2023.pdf" target="_blank">Ver documento</a>
-    </div>
-
-    <!-- MODELO AMBIENTAL -->
-    <h3>Modelo de Interacción Ambiental</h3>
-    <p>Propuesta de modelo de interacción ambiental aplicada al Parque Metropolitano Alma Viva, con énfasis en sostenibilidad y gestión urbana.</p>
-    <div class="doc-card">
-      <h4>Modelo de Interacción Ambiental – Parque Metropolitano Alma Viva</h4>
-      <a href="soportes/investigaciones/modelo-interaccion-ambiental-alma-viva.pdf" target="_blank">Ver documento</a>
-    </div>
-
-    <!-- DE LA GUERRA A LA SOÑADA PAZ -->
     <h3>De la Guerra a la Soñada Paz</h3>
     <p>Investigación sobre procesos de construcción de paz y reconciliación en contextos posconflicto.</p>
     <div class="doc-card">
@@ -115,10 +95,26 @@
       <a href="soportes/investigaciones/de-la-guerra-a-la-sonada-paz.pdf" target="_blank">Ver documento</a>
     </div>
 
-    <!-- PROYECTO ECOHOTEL -->
-    <h3>Proyecto Ecohotel “Los Arrendajos”</h3>
-    <p>Desarrollo integral del proyecto de turismo sostenible, incluyendo planificación, análisis de mercado y gestión de actores.</p>
-    <a href="fases-ecohotel.html" class="section-link">Fases del proyecto →</a>
+    <h3>Impacto Económico de la Producción de Coca en el PIB</h3>
+    <p>Análisis del impacto económico de la producción de coca en el Producto Interno Bruto del departamento de Nariño durante 1999–2023.</p>
+    <div class="doc-card">
+      <h4>Investigación económica aplicada</h4>
+      <a href="soportes/investigaciones/impacto-economico-coca-pib-narino-1999-2023.pdf" target="_blank">Ver documento</a>
+    </div>
+
+    <h3>Índice Multidimensional de Bogotá</h3>
+    <p>Estudio del comportamiento del índice multidimensional en la ciudad de Bogotá entre 2013 y 2023, con enfoque socioeconómico.</p>
+    <div class="doc-card">
+      <h4>Documento de análisis estadístico</h4>
+      <a href="soportes/investigaciones/indice-multidimensional-bogota-2013-2023.pdf" target="_blank">Ver documento</a>
+    </div>
+
+    <h3>Modelo de Interacción Ambiental</h3>
+    <p>Propuesta de modelo de interacción ambiental aplicada al Parque Metropolitano Alma Viva, con énfasis en sostenibilidad y gestión urbana.</p>
+    <div class="doc-card">
+      <h4>Parque Metropolitano Alma Viva</h4>
+      <a href="soportes/investigaciones/modelo-interaccion-ambiental-alma-viva.pdf" target="_blank">Ver documento</a>
+    </div>
 
     <p style="margin-top:40px;">
       <a href="index.html" style="color:#1f6feb; text-decoration:none;">← Volver a la página principal</a>
