--- a/experiencia.html
+++ b/experiencia.html
@@ -78,18 +78,21 @@
   <div class="container">
     <h2>Experiencia</h2>
 
+    <!-- Apoyo Técnico Administrativo – Porfía 1 -->
     <div class="card">
       <h3>Apoyo Técnico Administrativo – Porfía 1</h3>
       <p>Apoyo en procesos administrativos, organización documental y manejo de información institucional.</p>
       <a href="soportes/experiencia/apoyo-tecnico-porfia-1.pdf" target="_blank">Ver documento</a>
     </div>
 
+    <!-- Apoyo Técnico Administrativo – Porfía 3 -->
     <div class="card">
       <h3>Apoyo Técnico Administrativo – Porfía 3</h3>
       <p>Apoyo técnico y administrativo en procesos operativos y acompañamiento a la gestión institucional.</p>
       <a href="soportes/experiencia/apoyo-tecnico-porfia-3.pdf" target="_blank">Ver documento</a>
     </div>
 
+    <!-- Pasantía en Investigación -->
     <div class="card">
       <h3>Pasantía en Investigación</h3>
       <p>Apoyo en procesos de investigación académica, análisis de información y elaboración de insumos para trabajos investigativos.</p>
