--- a/fases-ecohotel.html
+++ b/fases-ecohotel.html
@@ -87,70 +87,70 @@
       Desarrollo integral del proyecto de turismo sostenible “Ecohotel Los Arrendajos”, organizado por fases con sus respectivos documentos de soporte. Cada fase refleja un paso clave en la formulación y planificación del proyecto.
     </p>
 
-    <!-- Fase 1 -->
+    <!-- Fase 1: Estudio Normativo -->
     <div class="card">
       <h3>Fase 1: Estudio Normativo</h3>
       <p>Análisis de normativas, regulaciones y requisitos legales aplicables al proyecto Ecohotel.</p>
       <a href="soportes/investigaciones/formulacion-de-proyectos/estudio-normativo.pdf" target="_blank">Ver documento</a>
     </div>
 
-    <!-- Fase 2 -->
+    <!-- Fase 2: Generalidades del Proyecto -->
     <div class="card">
       <h3>Fase 2: Generalidades del Proyecto</h3>
       <p>Presentación del proyecto Ecohotel Los Arrendajos: objetivos, alcance y contexto general.</p>
       <a href="soportes/investigaciones/formulacion-de-proyectos/generalidades-del-proyecto-del-ecohotel.pdf" target="_blank">Ver documento</a>
     </div>
 
-    <!-- Fase 3 -->
+    <!-- Fase 3: Mapa de Valor -->
     <div class="card">
       <h3>Fase 3: Mapa de Valor</h3>
       <p>Representación de la propuesta de valor del Ecohotel y sus elementos estratégicos para clientes y stakeholders.</p>
       <a href="soportes/investigaciones/formulacion-de-proyectos/mapa-de-valor.pdf" target="_blank">Ver documento</a>
     </div>
 
-    <!-- Fase 4 -->
+    <!-- Fase 4: Mapeo de Stakeholders -->
     <div class="card">
       <h3>Fase 4: Mapeo de Stakeholders</h3>
       <p>Identificación y análisis de los grupos de interés y actores clave del proyecto.</p>
       <a href="soportes/investigaciones/formulacion-de-proyectos/mapeo-de-stakeholders.pdf" target="_blank">Ver documento</a>
     </div>
 
-    <!-- Fase 5 -->
+    <!-- Fase 5: Relación de Actores -->
     <div class="card">
       <h3>Fase 5: Relación de Actores</h3>
       <p>Listado y descripción de los actores involucrados en el desarrollo del Ecohotel.</p>
       <a href="soportes/investigaciones/formulacion-de-proyectos/relacion-de-actores.pdf" target="_blank">Ver documento</a>
     </div>
 
-    <!-- Fase 6 -->
+    <!-- Fase 6: Stakeholders -->
     <div class="card">
       <h3>Fase 6: Stakeholders</h3>
       <p>Perfil y responsabilidades de cada stakeholder dentro del proyecto.</p>
       <a href="soportes/investigaciones/formulacion-de-proyectos/stakeholders.pdf" target="_blank">Ver documento</a>
     </div>
 
-    <!-- Fase 7 -->
+    <!-- Fase 7: Mercado Potencial -->
     <div class="card">
       <h3>Fase 7: Mercado Potencial</h3>
       <p>Análisis del mercado y la demanda potencial para el Ecohotel Los Arrendajos.</p>
       <a href="soportes/investigaciones/formulacion-de-proyectos/mercado-potencial-ecohotel.pdf" target="_blank">Ver documento</a>
     </div>
 
-    <!-- Fase 8 -->
+    <!-- Fase 8: Proyección de Mercado -->
     <div class="card">
       <h3>Fase 8: Proyección de Mercado</h3>
       <p>Estimación de ingresos y demanda a futuro para el proyecto Ecohotel.</p>
       <a href="soportes/investigaciones/formulacion-de-proyectos/proyeccion-de-mercado.pdf" target="_blank">Ver documento</a>
     </div>
 
-    <!-- Fase 9 -->
+    <!-- Fase 9: Modelo CANVAS -->
     <div class="card">
       <h3>Fase 9: Modelo CANVAS</h3>
       <p>Representación gráfica de la estructura de negocio y propuesta de valor del Ecohotel.</p>
       <a href="soportes/investigaciones/formulacion-de-proyectos/modelo-CANVAS.pdf" target="_blank">Ver documento</a>
     </div>
 
-    <!-- Fase 10 -->
+    <!-- Fase 10: Tipos de Involucrados -->
     <div class="card">
       <h3>Fase 10: Tipos de Involucrados</h3>
       <p>Clasificación de los diferentes tipos de actores y su grado de involucramiento en el proyecto.</p>
