--- a/index.html
+++ b/index.html
@@ -113,13 +113,33 @@
       <h2>Educación</h2>
       <div class="cards">
         <div class="card">
-          <h3>Acta y Certificados</h3>
-          <p>Incluye acta académica, certificados de créditos y certificado final del programa académico.</p>
+          <h3>Acta Académica</h3>
+          <p>Acta de grado que certifica la culminación y aprobación del proceso formativo.</p>
           <a href="educacion.html">Ver detalles</a>
         </div>
         <div class="card">
-          <h3>ESG y Econometría</h3>
-          <p>Formación en estrategias de sostenibilidad (ESG) y fundamentos de econometría.</p>
+          <h3>Certificado de Créditos</h3>
+          <p>Acredita los créditos cursados y aprobados dentro del programa académico.</p>
+          <a href="educacion.html">Ver detalles</a>
+        </div>
+        <div class="card">
+          <h3>Certificado Final</h3>
+          <p>Documento oficial que detalla calificaciones obtenidas y la intensidad horaria total del curso.</p>
+          <a href="educacion.html">Ver detalles</a>
+        </div>
+        <div class="card">
+          <h3>Documento Oficial TCOCF</h3>
+          <p>Certifica la formación y acreditación en el programa Técnico en Contabilización de Operaciones Comerciales y Financieras.</p>
+          <a href="educacion.html">Ver detalles</a>
+        </div>
+        <div class="card">
+          <h3>ESG – Estrategias de Sostenibilidad</h3>
+          <p>Certificado de formación en estrategias de sostenibilidad, enfoque ESG y gestión responsable.</p>
+          <a href="educacion.html">Ver detalles</a>
+        </div>
+        <div class="card">
+          <h3>Introducción a la Econometría</h3>
+          <p>Formación en fundamentos de econometría, análisis estadístico y modelos básicos.</p>
           <a href="educacion.html">Ver detalles</a>
         </div>
       </div>
@@ -130,13 +150,18 @@
       <h2>Experiencia</h2>
       <div class="cards">
         <div class="card">
-          <h3>Apoyo Técnico Administrativo</h3>
-          <p>Gestión administrativa y acompañamiento en asociaciones comunitarias (Porfía 1 y 3).</p>
+          <h3>Apoyo Técnico Administrativo – Porfía 1</h3>
+          <p>Apoyo en procesos administrativos, organización documental y manejo de información institucional.</p>
+          <a href="experiencia.html">Ver detalles</a>
+        </div>
+        <div class="card">
+          <h3>Apoyo Técnico Administrativo – Porfía 3</h3>
+          <p>Apoyo técnico y administrativo en procesos operativos y acompañamiento a la gestión institucional.</p>
           <a href="experiencia.html">Ver detalles</a>
         </div>
         <div class="card">
           <h3>Pasantía en Investigación</h3>
-          <p>Apoyo en investigación académica, análisis de información y elaboración de insumos.</p>
+          <p>Apoyo en procesos de investigación académica, análisis de información y elaboración de insumos para trabajos investigativos.</p>
           <a href="experiencia.html">Ver detalles</a>
         </div>
       </div>
@@ -148,12 +173,12 @@
       <div class="cards">
         <div class="card">
           <h3>Proyectos Investigativos</h3>
-          <p>Investigaciones en ordenamiento territorial, economía y desarrollo regional.</p>
+          <p>Acceso a investigaciones en ordenamiento territorial, economía y desarrollo regional.</p>
           <a href="investigaciones.html">Ver detalles</a>
         </div>
         <div class="card">
           <h3>Ecohotel Los Arrendajos</h3>
-          <p>Proyecto de turismo sostenible con planificación estratégica, análisis de mercado y gestión de actores.</p>
+          <p>Proyecto de turismo sostenible con planificación estratégica, mercado y stakeholders.</p>
           <a href="fases-ecohotel.html">Ver fases</a>
         </div>
       </div>
