--- a/investigaciones.html
+++ b/investigaciones.html
@@ -11,7 +11,7 @@
       padding: 0;
     }
     .container {
-      max-width: 950px;
+      max-width: 960px;
       margin: 60px auto;
       background-color: #fff;
       border-radius: 14px;
@@ -72,47 +72,86 @@
 <body>
 
   <div class="container">
-
     <h2>Investigaciones</h2>
 
-    <!-- PROYECTO ECOHOTEL -->
-    <h3>Proyecto Ecohotel “Los Arrendajos”</h3>
-    <p>Desarrollo integral del proyecto de turismo sostenible, incluyendo planificación, análisis de mercado y gestión de actores.</p>
-    <a href="fases-ecohotel.html" class="section-link">Fases del proyecto →</a>
+    <!-- FORMULACIÓN DE PROYECTOS: Ecohotel Los Arrendajos -->
+    <h3>Formulación de Proyectos – Ecohotel “Los Arrendajos”</h3>
 
-    <!-- INVESTIGACIONES GENERALES -->
-    <h3>Avance de Investigación – Ordenamiento Territorial</h3>
-    <p>Documento de avance investigativo orientado al análisis del ordenamiento territorial y el desarrollo regional sostenible.</p>
     <div class="doc-card">
-      <h4>Subregión Ariari (Meta)</h4>
+      <h4>Fase 1: Estudio Normativo</h4>
+      <a href="soportes/investigaciones/formulacion-de-proyectos/estudio-normativo.pdf" target="_blank">Ver documento</a>
+    </div>
+
+    <div class="doc-card">
+      <h4>Fase 2: Generalidades del Proyecto</h4>
+      <a href="soportes/investigaciones/formulacion-de-proyectos/generalidades-del-proyecto-del-ecohotel.pdf" target="_blank">Ver documento</a>
+    </div>
+
+    <div class="doc-card">
+      <h4>Fase 3: Mapa de Valor</h4>
+      <a href="soportes/investigaciones/formulacion-de-proyectos/mapa-de-valor.pdf" target="_blank">Ver documento</a>
+    </div>
+
+    <div class="doc-card">
+      <h4>Fase 4: Mapeo de Stakeholders</h4>
+      <a href="soportes/investigaciones/formulacion-de-proyectos/mapeo-de-stakeholders.pdf" target="_blank">Ver documento</a>
+    </div>
+
+    <div class="doc-card">
+      <h4>Fase 5: Relación de Actores</h4>
+      <a href="soportes/investigaciones/formulacion-de-proyectos/relacion-de-actores.pdf" target="_blank">Ver documento</a>
+    </div>
+
+    <div class="doc-card">
+      <h4>Fase 6: Stakeholders</h4>
+      <a href="soportes/investigaciones/formulacion-de-proyectos/stakeholders.pdf" target="_blank">Ver documento</a>
+    </div>
+
+    <div class="doc-card">
+      <h4>Fase 7: Mercado Potencial</h4>
+      <a href="soportes/investigaciones/formulacion-de-proyectos/mercado-potencial-ecohotel.pdf" target="_blank">Ver documento</a>
+    </div>
+
+    <div class="doc-card">
+      <h4>Fase 8: Proyección de Mercado</h4>
+      <a href="soportes/investigaciones/formulacion-de-proyectos/proyeccion-de-mercado.pdf" target="_blank">Ver documento</a>
+    </div>
+
+    <div class="doc-card">
+      <h4>Fase 9: Modelo CANVAS</h4>
+      <a href="soportes/investigaciones/formulacion-de-proyectos/modelo-CANVAS.pdf" target="_blank">Ver documento</a>
+    </div>
+
+    <div class="doc-card">
+      <h4>Fase 10: Tipos de Involucrados</h4>
+      <a href="soportes/investigaciones/formulacion-de-proyectos/tipos-de-involucrados.pdf" target="_blank">Ver documento</a>
+    </div>
+
+    <!-- OTROS DOCUMENTOS DE INVESTIGACIÓN -->
+    <h3>Otros Proyectos Investigativos</h3>
+
+    <div class="doc-card">
+      <h4>Avance de investigación – Subregión Ariari (Meta)</h4>
       <a href="soportes/investigaciones/avance-investigacion-ordenamiento-territorial-meta.pdf" target="_blank">Ver documento</a>
     </div>
 
-    <h3>De la Guerra a la Soñada Paz</h3>
-    <p>Investigación sobre procesos de construcción de paz y reconciliación en contextos posconflicto.</p>
     <div class="doc-card">
-      <h4>Columbia: Caminos hacia la Paz y la Reconstrucción</h4>
+      <h4>De la Guerra a la Soñada Paz</h4>
       <a href="soportes/investigaciones/de-la-guerra-a-la-sonada-paz.pdf" target="_blank">Ver documento</a>
     </div>
 
-    <h3>Impacto Económico de la Producción de Coca en el PIB</h3>
-    <p>Análisis del impacto económico de la producción de coca en el Producto Interno Bruto del departamento de Nariño durante 1999–2023.</p>
     <div class="doc-card">
-      <h4>Investigación económica aplicada</h4>
+      <h4>Impacto Económico de la Producción de Coca en el PIB (Nariño 1999–2023)</h4>
       <a href="soportes/investigaciones/impacto-economico-coca-pib-narino-1999-2023.pdf" target="_blank">Ver documento</a>
     </div>
 
-    <h3>Índice Multidimensional de Bogotá</h3>
-    <p>Estudio del comportamiento del índice multidimensional en la ciudad de Bogotá entre 2013 y 2023, con enfoque socioeconómico.</p>
     <div class="doc-card">
-      <h4>Documento de análisis estadístico</h4>
+      <h4>Índice Multidimensional de Bogotá (2013–2023)</h4>
       <a href="soportes/investigaciones/indice-multidimensional-bogota-2013-2023.pdf" target="_blank">Ver documento</a>
     </div>
 
-    <h3>Modelo de Interacción Ambiental</h3>
-    <p>Propuesta de modelo de interacción ambiental aplicada al Parque Metropolitano Alma Viva, con énfasis en sostenibilidad y gestión urbana.</p>
     <div class="doc-card">
-      <h4>Parque Metropolitano Alma Viva</h4>
+      <h4>Modelo de Interacción Ambiental – Parque Metropolitano Alma Viva</h4>
       <a href="soportes/investigaciones/modelo-interaccion-ambiental-alma-viva.pdf" target="_blank">Ver documento</a>
     </div>
 
