--- a/index.html
+++ b/index.html
@@ -20,9 +20,15 @@
     }
     .header {
       display: flex;
-      align-items: center;
       gap: 40px;
       margin-bottom: 40px;
+      flex-wrap: wrap;
+    }
+    .profile-img-container {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      min-width: 180px;
     }
     .profile-img {
       width: 180px;
@@ -30,15 +36,27 @@
       object-fit: cover;
       border-radius: 50%;
       box-shadow: 0 6px 18px rgba(0,0,0,0.12);
+      margin-bottom: 10px;
+    }
+    .profile-edu {
+      text-align: center;
+      font-size: 16px;
+      color: #57606a;
+      line-height: 1.5;
+    }
+    .profile-info {
+      flex: 1;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
     }
     .profile-info h1 {
       color: #1f6feb;
-      margin: 0 0 8px 0;
+      margin: 0 0 10px 0;
       font-size: 32px;
     }
     .profile-info p {
-      margin: 0;
-      color: #57606a;
+      margin: 4px 0;
       font-size: 16px;
       line-height: 1.5;
     }
@@ -98,13 +116,19 @@
 <body>
 
   <div class="container">
-    <!-- Header -->
+    <!-- Header con perfil -->
     <div class="header">
-      <img class="profile-img" src="Imagen fondo azul.png" alt="Daniel Betancur">
+      <div class="profile-img-container">
+        <img class="profile-img" src="Imagen fondo azul.png" alt="Daniel Betancur">
+        <div class="profile-edu">
+          Estudiante de Economía<br>
+          Universidad de los Llanos
+        </div>
+      </div>
       <div class="profile-info">
         <h1>Daniel Betancur</h1>
-        <p>Estudiante de Economía<br>Universidad de los Llanos</p>
-        <p>Investigador en economía ambiental y sostenible, con experiencia en análisis de proyectos y gestión administrativa.</p>
+        <p>Investigador en economía ambiental y sostenible</p>
+        <p>Con experiencia en análisis de proyectos y gestión administrativa</p>
       </div>
     </div>
 
@@ -113,23 +137,8 @@
       <h2>Educación</h2>
       <div class="cards">
         <div class="card">
-          <h3>Acta Académica</h3>
-          <p>Acta de grado que certifica la culminación y aprobación del proceso formativo.</p>
-          <a href="educacion.html">Ver detalles</a>
-        </div>
-        <div class="card">
           <h3>Certificado de Créditos</h3>
           <p>Acredita los créditos cursados y aprobados dentro del programa académico.</p>
-          <a href="educacion.html">Ver detalles</a>
-        </div>
-        <div class="card">
-          <h3>Certificado Final</h3>
-          <p>Documento oficial que detalla calificaciones obtenidas y la intensidad horaria total del curso.</p>
-          <a href="educacion.html">Ver detalles</a>
-        </div>
-        <div class="card">
-          <h3>Documento Oficial TCOCF</h3>
-          <p>Certifica la formación y acreditación en el programa Técnico en Contabilización de Operaciones Comerciales y Financieras.</p>
           <a href="educacion.html">Ver detalles</a>
         </div>
         <div class="card">
@@ -142,6 +151,21 @@
           <p>Formación en fundamentos de econometría, análisis estadístico y modelos básicos.</p>
           <a href="educacion.html">Ver detalles</a>
         </div>
+        <div class="card">
+          <h3>Acta Académica</h3>
+          <p>Acta de grado que certifica la culminación y aprobación del proceso formativo.</p>
+          <a href="educacion.html">Ver detalles</a>
+        </div>
+        <div class="card">
+          <h3>Certificado Final</h3>
+          <p>Documento oficial que detalla calificaciones obtenidas y la intensidad horaria total del curso.</p>
+          <a href="educacion.html">Ver detalles</a>
+        </div>
+        <div class="card">
+          <h3>Documento Oficial TCOCF</h3>
+          <p>Certifica la formación y acreditación en el programa Técnico en Contabilización de Operaciones Comerciales y Financieras.</p>
+          <a href="educacion.html">Ver detalles</a>
+        </div>
       </div>
     </div>
 
@@ -150,6 +174,11 @@
       <h2>Experiencia</h2>
       <div class="cards">
         <div class="card">
+          <h3>Pasantía en Investigación</h3>
+          <p>Apoyo en procesos de investigación académica, análisis de información y elaboración de insumos para trabajos investigativos.</p>
+          <a href="experiencia.html">Ver detalles</a>
+        </div>
+        <div class="card">
           <h3>Apoyo Técnico Administrativo – Porfía 1</h3>
           <p>Apoyo en procesos administrativos, organización documental y manejo de información institucional.</p>
           <a href="experiencia.html">Ver detalles</a>
@@ -157,11 +186,6 @@
         <div class="card">
           <h3>Apoyo Técnico Administrativo – Porfía 3</h3>
           <p>Apoyo técnico y administrativo en procesos operativos y acompañamiento a la gestión institucional.</p>
-          <a href="experiencia.html">Ver detalles</a>
-        </div>
-        <div class="card">
-          <h3>Pasantía en Investigación</h3>
-          <p>Apoyo en procesos de investigación académica, análisis de información y elaboración de insumos para trabajos investigativos.</p>
           <a href="experiencia.html">Ver detalles</a>
         </div>
       </div>
@@ -173,7 +197,7 @@
       <div class="cards">
         <div class="card">
           <h3>Proyectos Investigativos</h3>
-          <p>Acceso a investigaciones en ordenamiento territorial, economía y desarrollo regional.</p>
+          <p>Acceso a trabajos de investigación en ordenamiento territorial, economía y desarrollo regional.</p>
           <a href="investigaciones.html">Ver detalles</a>
         </div>
         <div class="card">
