--- a/educacion.html
+++ b/educacion.html
@@ -78,46 +78,22 @@
   <div class="container">
     <h2>Educación</h2>
 
-    <!-- Acta Académica -->
-    <div class="card">
-      <h3>Acta Académica</h3>
-      <p>Acta de grado expedida por el SENA que certifica la culminación y aprobación del proceso formativo.</p>
-      <a href="soportes/educacion/acta-academica.pdf" target="_blank">Ver documento</a>
-    </div>
-
-    <!-- Certificado de Créditos -->
+    <!-- CERTIFICADO DE CRÉDITOS -->
     <div class="card">
       <h3>Certificado de Créditos Académicos</h3>
       <p>Documento que acredita los créditos cursados y aprobados dentro del programa académico.</p>
-      <a href="soportes/educacion/certificado-creditos.pdf" target="_blank">Ver documento</a>
+      <a href="soportes/educacion/certificado-creditos.pdf" target="_blank">Ir a documento</a>
     </div>
 
-    <!-- Certificado Final -->
+    <!-- ACTA, CERTIFICADO FINAL Y DOCUMENTO OFICIAL TCOCF -->
     <div class="card">
-      <h3>Certificado Final</h3>
-      <p>Documento oficial que detalla las calificaciones obtenidas y la intensidad horaria total del curso.</p>
-      <a href="soportes/educacion/certificado-final.pdf" target="_blank">Ver documento</a>
-    </div>
-
-    <!-- Documento Oficial TCOCF -->
-    <div class="card">
-      <h3>Documento Oficial TCOCF</h3>
-      <p>Documento oficial que certifica la formación y acreditación en el programa Técnico en Contabilización de Operaciones Comerciales y Financieras.</p>
-      <a href="soportes/educacion/documento-oficial-tcocf.pdf" target="_blank">Ver documento</a>
-    </div>
-
-    <!-- ESG – Estrategias de Sostenibilidad -->
-    <div class="card">
-      <h3>ESG – Estrategias de Sostenibilidad</h3>
-      <p>Certificado de formación en estrategias de sostenibilidad, enfoque ESG y gestión responsable.</p>
-      <a href="soportes/educacion/esg-estrategias-sostenibilidad.pdf" target="_blank">Ver documento</a>
-    </div>
-
-    <!-- Introducción a la Econometría -->
-    <div class="card">
-      <h3>Introducción a la Econometría</h3>
-      <p>Certificado académico en fundamentos de econometría, análisis estadístico y modelos básicos.</p>
-      <a href="soportes/educacion/introduccion-econometria.pdf" target="_blank">Ver documento</a>
+      <h3>Acta Académica, Certificado Final y Documento Oficial TCOCF</h3>
+      <p>Documentos oficiales que certifican la culminación de estudios, calificaciones y acreditación en el programa Técnico en Contabilización de Operaciones Comerciales y Financieras.</p>
+      <a href="soportes/educacion/acta-academica.pdf" target="_blank">Ir a documentos</a>
+      <br>
+      <a href="soportes/educacion/certificado-final.pdf" target="_blank">Ir a documentos</a>
+      <br>
+      <a href="soportes/educacion/documento-oficial-tcocf.pdf" target="_blank">Ir a documentos</a>
     </div>
 
     <a class="back-link" href="index.html">← Volver a la página principal</a>
@@ -126,3 +102,4 @@
 
 </body>
 </html>
+
