--- a/experiencia.html
+++ b/experiencia.html
@@ -78,25 +78,25 @@
   <div class="container">
     <h2>Experiencia</h2>
 
-    <!-- Apoyo Técnico Administrativo – Porfía 1 -->
-    <div class="card">
-      <h3>Apoyo Técnico Administrativo – Porfía 1</h3>
-      <p>Apoyo en procesos administrativos, organización documental y manejo de información institucional.</p>
-      <a href="soportes/experiencia/apoyo-tecnico-porfia-1.pdf" target="_blank">Ver documento</a>
-    </div>
-
-    <!-- Apoyo Técnico Administrativo – Porfía 3 -->
-    <div class="card">
-      <h3>Apoyo Técnico Administrativo – Porfía 3</h3>
-      <p>Apoyo técnico y administrativo en procesos operativos y acompañamiento a la gestión institucional.</p>
-      <a href="soportes/experiencia/apoyo-tecnico-porfia-3.pdf" target="_blank">Ver documento</a>
-    </div>
-
-    <!-- Pasantía en Investigación -->
+    <!-- PASANTÍA EN INVESTIGACIÓN -->
     <div class="card">
       <h3>Pasantía en Investigación</h3>
       <p>Apoyo en procesos de investigación académica, análisis de información y elaboración de insumos para trabajos investigativos.</p>
-      <a href="soportes/experiencia/pasantia-investigacion.pdf" target="_blank">Ver documento</a>
+      <a href="soportes/experiencia/pasantia-investigacion.pdf" target="_blank">Ir a documento</a>
+    </div>
+
+    <!-- PORFÍA 1 -->
+    <div class="card">
+      <h3>Apoyo Técnico Administrativo – Porfía 1</h3>
+      <p>Apoyo en procesos administrativos, organización documental y manejo de información institucional.</p>
+      <a href="soportes/experiencia/apoyo-tecnico-porfia-1.pdf" target="_blank">Ir a documento</a>
+    </div>
+
+    <!-- PORFÍA 3 -->
+    <div class="card">
+      <h3>Apoyo Técnico Administrativo – Porfía 3</h3>
+      <p>Apoyo técnico y administrativo en procesos operativos y acompañamiento a la gestión institucional.</p>
+      <a href="soportes/experiencia/apoyo-tecnico-porfia-3.pdf" target="_blank">Ir a documento</a>
     </div>
 
     <a class="back-link" href="index.html">← Volver a la página principal</a>
