--- a/investigaciones.html
+++ b/investigaciones.html
@@ -11,7 +11,7 @@
       padding: 0;
     }
     .container {
-      max-width: 960px;
+      max-width: 950px;
       margin: 60px auto;
       background-color: #fff;
       border-radius: 14px;
@@ -72,88 +72,41 @@
 <body>
 
   <div class="container">
+
     <h2>Investigaciones</h2>
 
-    <!-- FORMULACIÓN DE PROYECTOS: Ecohotel Los Arrendajos -->
-    <h3>Formulación de Proyectos – Ecohotel “Los Arrendajos”</h3>
-
-    <div class="doc-card">
-      <h4>Fase 1: Estudio Normativo</h4>
-      <a href="soportes/investigaciones/formulacion-de-proyectos/estudio-normativo.pdf" target="_blank">Ver documento</a>
-    </div>
-
-    <div class="doc-card">
-      <h4>Fase 2: Generalidades del Proyecto</h4>
-      <a href="soportes/investigaciones/formulacion-de-proyectos/generalidades-del-proyecto-del-ecohotel.pdf" target="_blank">Ver documento</a>
-    </div>
-
-    <div class="doc-card">
-      <h4>Fase 3: Mapa de Valor</h4>
-      <a href="soportes/investigaciones/formulacion-de-proyectos/mapa-de-valor.pdf" target="_blank">Ver documento</a>
-    </div>
-
-    <div class="doc-card">
-      <h4>Fase 4: Mapeo de Stakeholders</h4>
-      <a href="soportes/investigaciones/formulacion-de-proyectos/mapeo-de-stakeholders.pdf" target="_blank">Ver documento</a>
-    </div>
-
-    <div class="doc-card">
-      <h4>Fase 5: Relación de Actores</h4>
-      <a href="soportes/investigaciones/formulacion-de-proyectos/relacion-de-actores.pdf" target="_blank">Ver documento</a>
-    </div>
-
-    <div class="doc-card">
-      <h4>Fase 6: Stakeholders</h4>
-      <a href="soportes/investigaciones/formulacion-de-proyectos/stakeholders.pdf" target="_blank">Ver documento</a>
-    </div>
-
-    <div class="doc-card">
-      <h4>Fase 7: Mercado Potencial</h4>
-      <a href="soportes/investigaciones/formulacion-de-proyectos/mercado-potencial-ecohotel.pdf" target="_blank">Ver documento</a>
-    </div>
-
-    <div class="doc-card">
-      <h4>Fase 8: Proyección de Mercado</h4>
-      <a href="soportes/investigaciones/formulacion-de-proyectos/proyeccion-de-mercado.pdf" target="_blank">Ver documento</a>
-    </div>
-
-    <div class="doc-card">
-      <h4>Fase 9: Modelo CANVAS</h4>
-      <a href="soportes/investigaciones/formulacion-de-proyectos/modelo-CANVAS.pdf" target="_blank">Ver documento</a>
-    </div>
-
-    <div class="doc-card">
-      <h4>Fase 10: Tipos de Involucrados</h4>
-      <a href="soportes/investigaciones/formulacion-de-proyectos/tipos-de-involucrados.pdf" target="_blank">Ver documento</a>
-    </div>
-
-    <!-- OTROS DOCUMENTOS DE INVESTIGACIÓN -->
-    <h3>Otros Proyectos Investigativos</h3>
+    <!-- Proyectos de Investigación -->
+    <h3>Proyectos de Investigación</h3>
 
     <div class="doc-card">
       <h4>Avance de investigación – Subregión Ariari (Meta)</h4>
-      <a href="soportes/investigaciones/avance-investigacion-ordenamiento-territorial-meta.pdf" target="_blank">Ver documento</a>
+      <a href="soportes/investigaciones/avance-investigacion-ordenamiento-territorial-meta.pdf" target="_blank">Ir a documento</a>
     </div>
 
     <div class="doc-card">
-      <h4>De la Guerra a la Soñada Paz</h4>
-      <a href="soportes/investigaciones/de-la-guerra-a-la-sonada-paz.pdf" target="_blank">Ver documento</a>
+      <h4>Columbia: Caminos hacia la Paz y la Reconstrucción</h4>
+      <a href="soportes/investigaciones/de-la-guerra-a-la-sonada-paz.pdf" target="_blank">Ir a documento</a>
     </div>
 
     <div class="doc-card">
-      <h4>Impacto Económico de la Producción de Coca en el PIB (Nariño 1999–2023)</h4>
-      <a href="soportes/investigaciones/impacto-economico-coca-pib-narino-1999-2023.pdf" target="_blank">Ver documento</a>
+      <h4>Impacto Económico de la Producción de Coca en el PIB (Nariño, 1999–2023)</h4>
+      <a href="soportes/investigaciones/impacto-economico-coca-pib-narino-1999-2023.pdf" target="_blank">Ir a documento</a>
     </div>
 
     <div class="doc-card">
       <h4>Índice Multidimensional de Bogotá (2013–2023)</h4>
-      <a href="soportes/investigaciones/indice-multidimensional-bogota-2013-2023.pdf" target="_blank">Ver documento</a>
+      <a href="soportes/investigaciones/indice-multidimensional-bogota-2013-2023.pdf" target="_blank">Ir a documento</a>
     </div>
 
     <div class="doc-card">
       <h4>Modelo de Interacción Ambiental – Parque Metropolitano Alma Viva</h4>
-      <a href="soportes/investigaciones/modelo-interaccion-ambiental-alma-viva.pdf" target="_blank">Ver documento</a>
+      <a href="soportes/investigaciones/modelo-interaccion-ambiental-alma-viva.pdf" target="_blank">Ir a documento</a>
     </div>
+
+    <!-- Proyecto Ecohotel -->
+    <h3>Proyecto Ecohotel “Los Arrendajos”</h3>
+    <p>Desarrollo integral del proyecto de turismo sostenible, incluyendo planificación, análisis de mercado y gestión de actores.</p>
+    <a href="fases-ecohotel.html" class="section-link">Ir a fases del proyecto →</a>
 
     <p style="margin-top:40px;">
       <a href="index.html" style="color:#1f6feb; text-decoration:none;">← Volver a la página principal</a>
