--- a/sena.html
+++ b/sena.html
@@ -1,14 +1,91 @@
-<div class="doc-card">
-  <h3>Acta Académica</h3>
-  <a href="soportes/educacion/sena/acta-academica.pdf" target="_blank">Ir a documento</a>
+<html lang="es">
+<head>
+  <meta charset="UTF-8">
+  <title>Documentos SENA | DSBC</title>
+  <style>
+    body {
+      font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+      background-color: #f6f8fa;
+      color: #24292f;
+      margin: 0;
+      padding: 0;
+    }
+    .container {
+      max-width: 960px;
+      margin: 60px auto;
+      background-color: #fff;
+      border-radius: 14px;
+      padding: 50px 60px;
+      box-shadow: 0 10px 30px rgba(0,0,0,0.06);
+    }
+    h2 {
+      color: #1f6feb;
+      margin-bottom: 30px;
+      font-size: 28px;
+      border-bottom: 2px solid #1f6feb;
+      padding-bottom: 8px;
+    }
+    .doc-card {
+      border: 1px solid #ddd;
+      border-radius: 12px;
+      padding: 20px;
+      margin-bottom: 20px;
+      background-color: #f9f9f9;
+      box-shadow: 0 6px 18px rgba(0,0,0,0.08);
+    }
+    .doc-card h3 {
+      margin: 0 0 10px 0;
+      color: #1f6feb;
+      font-size: 20px;
+    }
+    .doc-card a {
+      text-decoration: none;
+      display: inline-block;
+      background-color: #1f6feb;
+      color: #fff;
+      padding: 8px 14px;
+      border-radius: 6px;
+      font-weight: bold;
+      transition: background-color 0.3s;
+    }
+    .doc-card a:hover {
+      background-color: #155bb5;
+    }
+    .back-link {
+      display: inline-block;
+      margin-top: 40px;
+      color: #1f6feb;
+      text-decoration: none;
+      font-weight: bold;
+    }
+    .back-link:hover {
+      text-decoration: underline;
+    }
+  </style>
+</head>
+<body>
+
+<div class="container">
+  <h2>Documentos SENA</h2>
+
+  <div class="doc-card">
+    <h3>Acta Académica</h3>
+    <a href="soportes/educacion/sena/acta-academica.pdf" target="_blank">Ir a documento</a>
+  </div>
+
+  <div class="doc-card">
+    <h3>Certificado Final</h3>
+    <a href="soportes/educacion/sena/certificado-final.pdf" target="_blank">Ir a documento</a>
+  </div>
+
+  <div class="doc-card">
+    <h3>Documento Oficial TCOCF</h3>
+    <a href="soportes/educacion/sena/documento-oficial-tcocf.pdf" target="_blank">Ir a documento</a>
+  </div>
+
+  <a class="back-link" href="index.html">← Volver al CV | DSBC</a>
+
 </div>
 
-<div class="doc-card">
-  <h3>Certificado Final</h3>
-  <a href="soportes/educacion/sena/certificado-final.pdf" target="_blank">Ir a documento</a>
-</div>
-
-<div class="doc-card">
-  <h3>Documento Oficial TCOCF</h3>
-  <a href="soportes/educacion/sena/documento-oficial-tcocf.pdf" target="_blank">Ir a documento</a>
-</div>
+</body>
+</html>
